crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_harvest_ledger_prune.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"harvest\", \"ledger\", \"prune\", \"--help\"])"
---
$ engramdb harvest ledger prune --help
exit: 0
--- stdout ---
Evict archives past the retention limits (dry run by default)

Usage: engramdb harvest ledger prune [OPTIONS]

Options:
      --older-than <WHEN>
          Override `[harvest] archive_retention_days` for this run (days, e.g. `90d`)

      --max-bytes <BYTES>
          Override `[harvest] archive_max_bytes` for this run

      --apply
          Actually delete (default is a dry run, like `gc` and `compress`)

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
