crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_harvest_mark.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"harvest\", \"mark\", \"--help\"])"
---
$ engramdb harvest mark --help
exit: 0
--- stdout ---
Record that a session has been reviewed, so it is not offered again

Usage: engramdb harvest mark [OPTIONS] <SESSION_ID>

Arguments:
  <SESSION_ID>
          Session id, or a unique prefix of one

Options:
      --memory <ID>
          Id of a memory created from this session (repeatable). Omit when the session yielded nothing — recording a zero-yield review is what stops it being re-read on the next harvest

      --all-projects
          Search every session on this machine, not just this project's. Mirrors `show`, so a session you were able to digest is always a session you can mark as reviewed

      --defer
          Record the session as deliberately postponed rather than settled. Deferred sessions keep appearing in `harvest list`

      --note <NOTE>
          Why the session was skipped or deferred

      --summary <SUMMARY>
          Curated one-or-two-sentence summary of what this session was about, written into the search index alongside the decision

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
