crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_harvest_search.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"harvest\", \"search\", \"--help\"])"
---
$ engramdb harvest search --help
exit: 0
--- stdout ---
Search indexed past conversations

Usage: engramdb harvest search [OPTIONS] <QUERY>

Arguments:
  <QUERY>
          What to look for

Options:
  -n, --limit <LIMIT>
          Maximum number of conversations to return
          
          [default: 10]

      --since <WHEN>
          Only conversations that ended since this point: an RFC 3339 timestamp or a relative shorthand like `30d`, `12h`, `2w`

      --all-projects
          Search every project's conversations on this machine

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
